--- a/index.html
+++ b/index.html
@@ -729,8 +729,8 @@
     <script>
         // Configuration
         const CONFIG = {
-            LIFF_ID: 'YOUR_LIFF_ID', // ใส่ LIFF ID ของคุณที่นี่
-            GAS_URL: 'YOUR_GOOGLE_APPS_SCRIPT_URL', // ใส่ URL ของ Google Apps Script
+            LIFF_ID: '2008803474-hRJaVbm7', // ใส่ LIFF ID ของคุณที่นี่
+            GAS_URL: 'https://script.google.com/macros/s/AKfycbwCfEmFkQ5bjats998463XFT2s6tvM1bqJFvx8rOJiKs4tlvHxXwLXRQeFGPYPkO9CNSw/exec', // ใส่ URL ของ Google Apps Script
             PROMPTPAY_ID: '0615924262',
             TIMEZONE: 'Asia/Bangkok'
         };
