--- a/admin.html
+++ b/admin.html
@@ -733,7 +733,7 @@
     <script>
         // Configuration
         const CONFIG = {
-            GAS_URL: 'YOUR_GOOGLE_APPS_SCRIPT_URL', // ใส่ URL ของ Google Apps Script
+            GAS_URL: 'https://script.google.com/macros/s/AKfycbwCfEmFkQ5bjats998463XFT2s6tvM1bqJFvx8rOJiKs4tlvHxXwLXRQeFGPYPkO9CNSw/exec', // ใส่ URL ของ Google Apps Script
             TIMEZONE: 'Asia/Bangkok'
         };
 
